# ryzen-mobile-power-optimizer

./: .gitignore  AGENTS.md  README.md  cpu_stability_test.py  power-configuration.md  power_optimizer.py  prerequisites.md  pyproject.toml
results/: power-test-report-no-undervolt.csv  power-test-report-undervolt-15.csv  power-test-report-undervolt-20.csv
ryzen_mobile_power_optimizer/: __init__.py  cli.py  hardware.py  optimizer.py  profiles.py
ryzen_mobile_power_optimizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_cli.py  test_hardware.py  test_optimizer.py  test_profiles.py
